fixed some layout issues

--- a/css/style.css
+++ b/css/style.css
@@ -344,8 +344,8 @@ template {
 .grid-container {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 40px;
-  margin: 50px;
+  grid-gap: 20px;
+  margin: 20px;
 }
 
 body {
@@ -370,7 +370,8 @@ header div {
 
 .avatar {
   border-radius: 50%;
-  padding: 20px;
+  padding: 10px;
+  max-width: 75px;
 }
 
 .text-container {
@@ -378,9 +379,11 @@ header div {
   align-items: flex-start;
   flex-direction: column;
   padding: 20px;
+  max-width: 130px;
 }
 .text-container p {
   margin: 5px 0;
+  font-size: small;
 }
 
 body {
