--- a/scss/layout/_containers.scss
+++ b/scss/layout/_containers.scss
@@ -28,15 +28,18 @@ header {
 }
 .avatar {
     border-radius: 50%;
-    padding: 20px;
+    padding: 10px;
+    max-width: 75px;
 }
 .text-container {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
     padding: 20px;
+    max-width: 130px;
     & p {
         margin: 5px 0;
+        font-size: small;
     }
 }
 
