--- a/scss/layout/_grid.scss
+++ b/scss/layout/_grid.scss
@@ -1,6 +1,6 @@
 .grid-container {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    grid-gap: 40px;
-    margin: 50px;
+    grid-gap: 20px;
+    margin: 20px;
 }
